src/Styles/Style.css
@import url("./Typography.css");
/* CSS Reset from https://www.joshwcomeau.com/css/custom-css-reset/ */
*, *::before, *::after { box-sizing: border-box;}
* { margin: 0; padding: 0; }
body { line-height: 1.5; -webkit-font-smoothing: antialiased; }
img, picture, video, canvas, svg { display: block; max-width: 100%; }
input, button, textarea, select { font: inherit; }
p, h1, h2, h3, h4, h5, h6 { overflow-wrap: break-word; }
#root, #__next { isolation: isolate; }

/*------------------------------------------------------------------*/
:root {
  /* Colours */
  --primary:       #1A1A1A;
  --primary-light: color-mod(var(--color-primary) tint(15%));
  --primary-dark:  color-mod(var(--color-primary) shade(15%));

  --accent:       #f5414f;
  --accent-light: color-mod(var(--color-accent) tint(15%));
  --accent-dark:  color-mod(var(--color-accent) shade(10%));

  --white:       #FAFAFA;
  --gray:        hsla(210, 4%, 80%, 1);
  --black:       hsla(210, 4%, 15%, 1);

  --selected:    color-mod(var(--primary) alpha(20%));
  --success:     #50C878;
  --error:       hsla(0, 96%, 35%, 1);
  --warning:     hsla(48, 96%, 45%, 1);

  /* Spacing */
  --space-unit:   clamp(1rem, 5vw, 2rem);
  --space-xxs:    calc(0.25 * var(--space-unit));
  --space-xs:     calc(0.5 * var(--space-unit));
  --space-sm:     calc(0.75 * var(--space-unit));
  --space-md:     calc(1.25 * var(--space-unit));
  --space-lg:     calc(2 * var(--space-unit));
  --space-xl:     calc(3.25 * var(--space-unit));
  --space-xxl:    calc(5.25 * var(--space-unit));
}
/*------------------------------------------------------------------*/

#root {
  background-color: var(--primary);
  color: var(--white);

  background-image: url(../Assets/Noise\ &\ Texture.svg);
  background-repeat: repeat;
  scroll-behavior: smooth;
}

button{
  display: flex;
  align-items: center;
  justify-content:center;
  padding: 6px 12px 6px 7px;

  border-style: solid;
  border-color: var(--white);
  border-radius: 100px;
  background: none;

  cursor: pointer;
}

button > img {
  height: 20px;
  width: auto;
  margin-right: 4px;
}

/*----------------------------- TOP NAV ----------------------------*/
#TopNav {
  box-sizing: border-box;
  position: sticky;
  top: 0;
  width: 100%;
  padding: 5vh 8vw 3vh 8vw;
  transform: translateY(2vh);
  z-index: 1;
  background: linear-gradient(
    to bottom, 
    rgba(26, 26, 26, 100), 
    rgba(26, 26, 26, 0)
  );
}

#TopNav > nav, .MenuContainer, .Availability {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.StatusIndicator {
  height: 0.75rem;
  width: 0.75rem;
  margin-right: 0.5rem;

  background-color: var(--success);
  border-radius: 50%;
  border-style: none;
}

.MenuContainer {
  gap: 10px;
}
/*----------------------------- LANDING ----------------------------*/
#LandingSection {
  display: flex;
  flex-direction: column;

  width: 100%;
  padding-left: 5vw;
  height: 70vh;
  gap: 0.5vh;

  padding-top: 5vh;
}

#LandingSection > p {
  width: 75vw;
}

.contactContainer {
  height: 40px;
}

.contacts {
  display: flex;
  flex-grow: 1;
  gap: 2vw;
  height: 100%;
}

.contacts img {
  height: 100%;
  width: auto;
}

.quote {
  margin-top: 5vh;
  margin-right: 15vw;
}

.quote > h3 {
  width: 60vw;
  margin-bottom: 1rem;
}

.scrollIndicator {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 2vw;
  height: 20vh;
}
/*---------------------------- PROJECTS ----------------------------*/
#ProjectSection {
  position: relative;
  padding-top: 10vh;
}

.titleContainer {
  position: fixed;
  top: 40vh;

  display: flex;
  flex-direction: column;
  align-items: center;

  width: 100vw;
  z-index: -1;
  text-align: start;
}

.projectTitle{
  position: relative;
  width: 80vw;
  display: block; 
  overflow: hidden;
  white-space: pre;
}

.hiddenTitle {
  position: absolute;
  width: 100%;
  inset: 0;
}

.projectTitle > div > span{
  display: inline-block;
  width: 100%;
}

.Projects {
  display: flex;
  flex-direction: column;
  justify-content: space-around;

  height: 100%;
  padding: 5vh 0;
}

/*------------------------ CAROUSEL & CARD ------------------------*/
.Projects > div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 4vh;

  margin: 75vh 5vw;
  background-color: rgba(26, 26, 26, 0.8);
}

.cardDisplay {
  margin-bottom: 1vh;
  width: 100%;
  height: 20vh;
  background-color: #c4c2c2;
  border-radius: 2vw;
  overflow: hidden;
}

.cardDisplay > img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

/*----------------------------- DRAWER ----------------------------*/
.drawerContainer {
  position: fixed;
  top: 0;
  left: 0;

  width: 100%;
  height: 100%;

  background-color: rgba(26, 26, 26, 0.75);
  z-index: 5;
}

.drawerContainer > div {
  position: absolute;
  bottom: 0%;
  height: 90vh;
  width: 100%;
  overflow: hidden;
  border-radius: 4vh 4vh 0vh 0vh;

  background-color: #222222;
}

.drawerHandle {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  z-index: 10;

  display: flex;
  justify-content: center;
}

.drawerHandle > button {
  background-color: #939393;
  border-width: 1vh;
  border-color: #222222;;
  width: 10%;
  cursor: grab;
}

.drawerHandle > button:active {
  cursor: grabbing;
}

.drawerContent {
  position: relative;
  z-index: 2;
  height: 100%;
  overflow-y: scroll;

  padding: 5vh 5vw 5vh 5vw;
}

.drawerContent > h3 {
  margin-bottom: 0.5vh;
}

.carousel {
  position: relative;
  overflow: hidden;

  min-height: 90%;
  padding: 2vh 5vw;
}

.carousel > div{
  display: flex;
  align-items: center;
  cursor: grab;
}

.carousel > div:active{
  cursor: grabbing;
}

.carouselImage {
  aspect-ratio: 9/16;
  width: 100%;
  flex-shrink: 0;
}

.carouselProgress{
  display: flex;
  justify-content: center;
  gap: 2vw;

  width: 100%;
  height: 4vh;
  margin-top: 1vh;
}

.carouselProgress > button {
  height: 3vw;
  width: 3vw;
}

/*----------------------------- ABOUT -----------------------------*/
#AboutSec {
  margin: 0vh 2vw 3vh 2vw;
}

.shortStory {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 0rem 0.5rem;

  background-color: var(--white);
  border-radius: 2vh;
  padding: 2vh;

  margin-bottom: 1vh;
}

.shortStory h3{
  color: var(--primary);
}

.shortStory img{
  background-color: #1A1A1A;
  border-radius: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

#AboutSec > div > div:nth-of-type(2){
  display: flex;
  height: 2rem;
  gap: 2vw;
}

#AboutSec > div:nth-of-type(2){
  margin-top: 3vh;
}
/*------------------------------ FAQ ------------------------------*/
#FAQSec {
  margin: 0vh 2vw 5vh 2vw;
}

#FAQSec > h2 {
  margin-bottom: 1vh;
}

.QAcontainer {
  padding: 1vh 2vw;
  border-radius: 1vh;
  cursor: pointer;
}

.question {
  display: flex;
  gap: 1vw;
  align-items: center;
}

.question > img {
  height: 1rem;
  width: 1rem;
  background-color: #1A1A1A;
  border-radius: 50%;
}
/*----------------------------- Footer ----------------------------*/
footer {
  z-index: -50;
  display: flex;
  flex-direction: column;
  gap: 1vh;

  align-items: center;
  justify-content: center;
  padding-bottom: 5vh;
}

/* Large phones */
@media only screen and (min-width: 640px) {}

/* Tablets */
@media only screen and (min-width: 768px) {}

/* Laptops */
@media only screen and (min-width: 1024px) {}

/* Desktops */
@media only screen and (min-width: 1280px) {}

